crates/ruff_python_parser/tests/snapshots/invalid_syntax@simple_and_compound_stmt_on_same_line_in_block.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/simple_and_compound_stmt_on_same_line_in_block.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..59,
        body: Suite {
            range: 0..59,
            node_index: NodeIndex(None),
            statements: [
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 0..13,
                        test: BooleanLiteral(
                            ExprBooleanLiteral {
                                node_index: NodeIndex(None),
                                range: 3..7,
                                value: true,
                            },
                        ),
                        body: Suite {
                            range: 9..13,
                            node_index: NodeIndex(None),
                            statements: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 9..13,
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 14..28,
                        test: BooleanLiteral(
                            ExprBooleanLiteral {
                                node_index: NodeIndex(None),
                                range: 17..22,
                                value: false,
                            },
                        ),
                        body: Suite {
                            range: 24..28,
                            node_index: NodeIndex(None),
                            statements: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 24..28,
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 29..42,
                        test: BooleanLiteral(
                            ExprBooleanLiteral {
                                node_index: NodeIndex(None),
                                range: 32..36,
                                value: true,
                            },
                        ),
                        body: Suite {
                            range: 38..42,
                            node_index: NodeIndex(None),
                            statements: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 38..42,
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
                If(
                    StmtIf {
                        node_index: NodeIndex(None),
                        range: 44..58,
                        test: BooleanLiteral(
                            ExprBooleanLiteral {
                                node_index: NodeIndex(None),
                                range: 47..52,
                                value: false,
                            },
                        ),
                        body: Suite {
                            range: 54..58,
                            node_index: NodeIndex(None),
                            statements: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(None),
                                        range: 54..58,
                                    },
                                ),
                            ],
                        },
                        elif_else_clauses: [],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | if True: pass if False: pass
  |               ^^ Syntax Error: Compound statements are not allowed on the same line as simple statements
2 | if True: pass; if False: pass
  |


  |
1 | if True: pass if False: pass
2 | if True: pass; if False: pass
  |                ^^ Syntax Error: Compound statements are not allowed on the same line as simple statements
  |
